--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 						<a href="index.html">training<em>studio</em></a>
 					</div>
 					<ul class="menu">
-						<li><a href="#">home</a></li>
-						<li><a href="#">about</a></li>
+						<li><a href="#main">home</a></li>
+						<li><a href="#section">about</a></li>
 						<li><a href="#">classes</a></li>
 						<li><a href="#">schedules</a></li>
 						<li><a href="#">contact</a></li>
@@ -46,7 +46,7 @@
 		</header>
 
 		<!-- main_banner -->
-		<div class="main_banner">
+		<div class="main_banner" id="main">
 			<video autoplay muted loop id="main_video">
 				<source src="images/gym-video.mp4" type="video/mp4">
 			</video>
@@ -64,7 +64,7 @@
 
 		<!-- section -->
 
-		<section class="section">
+		<section class="section" id="section">
 			<div class="container">
 				<div class="section_header">
 					<h2>choose <em>program</em></h2>
@@ -108,7 +108,7 @@
 
 				</div>
 
-				<div class="section_main">
+				<div class="section_main" id="features">
 					<ul class="features_items">
 						<li class="feature_item">
 							<div class="left_icon">
@@ -146,7 +146,16 @@
 			</div>
 		</section>
 
-		
+		<!-- sub section -->
+		<section class="section_sub">			
+			<div class="container">
+					<div class="banner_caption">
+						<h4>Don't <em>think</em>, begin <em>today</em>!</h4>
+						<p>Ut consectetur, metus sit amet aliquet placerat, enim est ultricies ligula, sit amet dapibus odio augue eget libero. Morbi tempus mauris a nisi luctus imperdiet.</p>
+						<a href="#">becom a member</a>
+					</div>
+			</div>
+		</section>
 	</div>
 
 	<!-- js -->
